--- a/src/styles/2-layouts/_header.scss
+++ b/src/styles/2-layouts/_header.scss
@@ -1,8 +1,9 @@
-header {
-    @include circleThing(100%, 200px, 200px, $blue, white);
-
+.header {
     h1 {
 	font-size: $font-size + 2;
     }
 }
 
+.header--circle {
+    @include circleThing(100%, 200px, 200px, $blue, white);
+}
