--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,3 +4,20 @@
     background: #036;
     background: linear-gradient($grad1, $grad2);
 }
+
+@mixin cascade($colour) {
+    position: relative;
+    &::before {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	z-index: -2;
+	top: 10px;
+	left: -10px;
+	background: darken($colour, 10%);
+
+	box-shadow: -10px 10px 0 darken($colour, 5%);
+    }
+}
+
